 Code rewritten using C++17
 GiNaC is now shipped inside the package rather than downloaded by a script 
Added:
 Classes PseudoRiemannianStructure and PseudoLeviCivita
 AbstractLieGroup with parameters
 Classes pqStructure and CoherentSplitting that enable computations with "coherent splittings"
 Adjoint representation
 Added a second constructor to AbstractLieSubgroup
 Stream manipulator OmitArgument for a nicer output of functions of a single variable and their derivatives
 Stream manipulator Label to print vectors of equations of the form x_1=? , ... , x_n=?
 Simplifiers
 
Version 0.4.0
Fixed:
 Improved registration code to avoid static initialization race conditions.
 Updated code for compatibility with GiNaC 1.8.3.
 Minor fixes for compatibility with CoCoaLib 0.99800.
Changed:
 Switched to cmake.
 Reorganized files in directories. This breaks compatibility with older versions, hence the increase in minor version.
 CoCoA is no longer optional. 
Removed:
 Dictionary example. This should have been a separate program from the beginning.
 Support for arageli.
 
 Version 0.4.1
 Fixed:
  fixed error in tests introduced in version 0.4.0 which resulted in exception-throwing assertions not being checked
 Changed:
  Constructors for AbstractLieGroup now accept strings as well as string literals
  Constructors for AbstractLieGroup<true> now accept an arbitrary number of parameters of type lst, ex, Name or NameIndex
 Added:
  Class PseudoRiemannianStructureByMatrix, allowing one to define a pseudo-riemannian metric by giving the matrix of the scalar product relative to a frame
  functions canonical_print, to_canonical_string and to_latex_canonical_string for canonical printing of ginac ex's (both in dflt and latex output). 
  LieGroup::canonical_print for canonical printing of Lie groups

 Version 0.4.2
 Changed:
  AbstractLieGroup constructors now accept strings as well as string literals 
  LieGroup::canonical_print returns reference to ostream